--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
   text-align: center;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
